--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,141 +1,110 @@
 imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
-    - { resource: services.yml }
-
-# Put parameters here that don't need to change on each machine where the app is deployed
-# http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
-parameters:
-    locale: en
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
-    translator: ~
-    serializer:
-        enabled: true
-        enable_annotations: true
-        cache: serializer.mapping.cache.apc
-    secret:          "%secret%"
+    translator:      { fallback: %locale% }
+    secret:          %secret%
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
-        strict_requirements: ~
+        strict_requirements: %kernel.debug%
     form:            ~
-    csrf_protection: ~
+    csrf_protection: false
     validation:      { enable_annotations: true }
-    #serializer:      { enable_annotations: true }
     templating:
         engines: ['twig']
         #assets_version: SomeVersionScheme
     default_locale:  "%locale%"
-    trusted_hosts:   ~
     trusted_proxies: ~
-    session:
-        # handler_id set to null will use default session handler from php.ini
-        handler_id:  ~
+    session:         false
     fragments:       ~
-    http_method_override: true
 
 # Twig Configuration
 twig:
-    debug:            "%kernel.debug%"
-    strict_variables: "%kernel.debug%"
+    debug:            %kernel.debug%
+    strict_variables: %kernel.debug%
+    exception_controller: 'FOS\RestBundle\Controller\ExceptionController::showAction'
 
 # Assetic Configuration
 assetic:
-    debug:          "%kernel.debug%"
+    debug:          %kernel.debug%
     use_controller: false
     bundles:        [ ]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
         #closure:
-        #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
+        #    jar: %kernel.root_dir%/Resources/java/compiler.jar
         #yui_css:
-        #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
+        #    jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
 
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   pdo_mysql
-        host:     "%database_host%"
-        port:     "%database_port%"
-        dbname:   "%database_name%"
-        user:     "%database_user%"
-        password: "%database_password%"
+        driver:   %database_driver%
+        host:     %database_host%
+        port:     %database_port%
+        dbname:   %database_name%
+        user:     %database_user%
+        password: %database_password%
         charset:  UTF8
-        # if using pdo_sqlite as your database driver:
-        #   1. add the path in parameters.yml
-        #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
-        #   2. Uncomment database_path in parameters.yml.dist
-        #   3. Uncomment next line:
-        #     path:     "%database_path%"
+        # if using pdo_sqlite as your database driver, add the path in parameters.yml
+        # e.g. database_path: %kernel.root_dir%/data/data.db3
+        # path:     %database_path%
 
     orm:
-        auto_generate_proxy_classes: "%kernel.debug%"
-        naming_strategy: doctrine.orm.naming_strategy.underscore
+        auto_generate_proxy_classes: %kernel.debug%
         auto_mapping: true
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: "%mailer_transport%"
-    host:      "%mailer_host%"
-    username:  "%mailer_user%"
-    password:  "%mailer_password%"
+    transport: %mailer_transport%
+    host:      %mailer_host%
+    username:  %mailer_user%
+    password:  %mailer_password%
     spool:     { type: memory }
 
-
-fos_user:
-    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
-    firewall_name: api
-    user_class: 'API\UserBundle\Entity\User'
+sensio_framework_extra:
+    view: { annotations: false }
 
 fos_rest:
-    unauthorized_challenge: "Basic realm=\"Restricted Area\""
+    disable_csrf_role: ROLE_API
+    param_fetcher_listener: true
     view:
-#        default_engine: php
-        view_response_listener: true
-        force_redirects:
-          html: true
-#          xml: true
+        mime_types:
+            json: ['application/json', 'application/json;version=1.0', 'application/json;version=1.1']
+        view_response_listener: 'force'
         formats:
-            jsonp: true
+            xml:  true
             json: true
-            xml: true
-            rss: false
         templating_formats:
             html: true
-        mime_types:
-            json: ['application/json', 'application/x-json', 'application/vnd.example-com.foo+json']
-            jsonp: 'application/javascript+jsonp'
-            rss: 'application/rss+xml'
-            jpg: 'image/jpeg'
-            png: 'image/png'
-        jsonp_handler: ~
-    body_listener: true
-    param_fetcher_listener: force
-    allowed_methods_listener: true
-    access_denied_listener:
-        json: true
     format_listener:
         rules:
-            - { path: ^/api/user, priorities: [html, json, xml], fallback_format: ~, prefer_extension: false }
             - { path: ^/, priorities: [ html, json, xml ], fallback_format: ~, prefer_extension: true }
-    routing_loader:
-        default_format: ~
+        media_type:
+            version_regex: '/(v|version)=(?P<version>[0-9\.]+)/'
     exception:
         codes:
             'Symfony\Component\Routing\Exception\ResourceNotFoundException': 404
             'Doctrine\ORM\OptimisticLockException': HTTP_CONFLICT
         messages:
             'Symfony\Component\Routing\Exception\ResourceNotFoundException': true
-    service:
-        view_handler: api_user.view_handler
-    serializer:
-#        version: 1.0
-#        groups: [data]
+    allowed_methods_listener: true
+    access_denied_listener:
+        json: true
+    body_listener: true
 
-sensio_framework_extra:
-    view:    { annotations: false }
-    router:  { annotations: true }
-    request: { converters: true }
+fos_http_cache:
+    cache_control:
+        rules:
+            # the controls section values are used in a call to Response::setCache();
+            -
+                match:
+                    path: ^/notes
+                    methods: [GET, HEAD]
+                headers:
+                    cache_control: { public: true, max_age: 15, s_maxage: 30 }
+                    last_modified: "-1 hour"
+                    vary: [Accept-Encoding, Accept-Language]
