--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,9 +1,3 @@
-api_user:
-    resource: "@APIUserBundle/Resources/config/routing.yml"
-    prefix:   /api/user
-
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
-
-
+NelmioApiDocBundle:
+  resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
+  prefix:   /api/doc
