--- a/composer.json
+++ b/composer.json
@@ -7,18 +7,19 @@
         "psr-0": { "": "src/" }
     },
     "require": {
-        "php": ">=5.3.3",
-        "symfony/symfony": "~2.3",
-        "symfony/icu": "1.0.*",
-        "doctrine/orm": "~2.2,>=2.2.3",
-        "doctrine/doctrine-bundle": "1.2.*",
+        "php": ">=5.5.0",
+        "symfony/symfony": "~2.7",
+        "symfony/icu": "~1.2",
+        "doctrine/orm": "~2.2,>=2.2.3,<2.5",
+        "doctrine/dbal": "<2.5",
+        "doctrine/doctrine-bundle": "~1.4",
         "twig/extensions": "1.0.*",
-        "symfony/assetic-bundle": "2.3.*",
-        "symfony/swiftmailer-bundle": "2.3.*",
-        "symfony/monolog-bundle": "~2.3",
-        "sensio/distribution-bundle": "2.3.*",
-        "sensio/framework-extra-bundle": "2.3.*",
-        "sensio/generator-bundle": "2.3.*",
+        "symfony/assetic-bundle": "~2.3",
+        "symfony/swiftmailer-bundle": "~2.3",
+        "symfony/monolog-bundle": "~2.4",
+        "sensio/distribution-bundle": "~4.0",
+        "sensio/framework-extra-bundle": "^3.0@dev",
+        "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/rest-bundle": "1.4.*",
         "nelmio/api-doc-bundle": "~2.4",
         "friendsofsymfony/http-cache-bundle": "~1.0",
@@ -27,8 +28,8 @@
         "willdurand/rest-extra-bundle": "~1.0",
         "jms/serializer-bundle": "^1.0"
     },
-    "conflict": {
-        "symfony/routing": "2.4.1"
+    "require-dev": {
+      "sensio/generator-bundle": "~2.3"
     },
     "scripts": {
         "post-install-cmd": [
